Build Backbone Models and Collections; fix background image

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,5 +1,5 @@
 body {
-  background: url('CookieMonster.jpg') no-repeat center center fixed;
+  background: url('http://cdn.wall-pix.net/albums/entertainment-humour/00004151.Cookie.Monster.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
