Add Backbone Views, attempt to fix User New page

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Sign Up!</h1>
 
-<form class="user user-signup" action="/users" method="post">
+<form class="user user-signup" action="/users/create" method="post">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>"
 
   <label for="email">Email</label>
