Make a Basic Mnemosynerails srails srails srails srails s

--- a/app/assets/templates/navbar/navshow.jst.ejs
+++ b/app/assets/templates/navbar/navshow.jst.ejs
@@ -6,7 +6,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <h1 href="#"><a class="main-title" href="#">Devour</a></h1>
+    <h1><a class="main-title" href="/">Devour</a></h1>
   </div>
 
   <div class="collapse navbar-collapse" id="devour-navbar-collapse-1">
