--- a/app/assets/templates/navbar/navshow.jst.ejs
+++ b/app/assets/templates/navbar/navshow.jst.ejs
@@ -13,7 +13,7 @@
     <ul class="nav navbar-nav navbar-right">
 
       <li id="add-dropdown" class="sign-out dropdown">
-        <button class="dropdown-toggle navbar-btn btn btn-primary" data-toggle="dropdown">
+        <button type="submit" class="dropdown-toggle navbar-btn btn btn-primary" data-toggle="dropdown">
           <span class="glyphicon glyphicon-plus"></span>
         </button>
       </li>
@@ -23,7 +23,7 @@
 
       <div class="navbar-inner brand">
         <a href="#">Decks</a>
-        <a>Study</a>
+        <a href="#/search">Study</a>
         <a href="#/decks/new">Add</a>
         <a>Search</a>
         <a>More</a>
