Clean up CSS for DecksIndex

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -26,14 +26,14 @@ h2.main-header {
   margin-top: 10%;
 }
 
-ul.deck-list {
-  margin-top: 58px;
-}
-
 form {
   position: relative;
   text-align: center;
-  // margin-top: 18%;
+  background: white;
+  position: relative;
+  text-align: center;
+  padding: 10px;
+  margin-bottom: 25px;
 }
 
 form:first-child {
