Make Delete Deck button functional

--- a/app/assets/templates/deck/index.jst.ejs
+++ b/app/assets/templates/deck/index.jst.ejs
@@ -8,7 +8,7 @@
       </h2>
     </a>
     <button type="submit" data-deck-id="<%=deck.id%>" class="btn btn-success btn-lg">Devour <%= deck.escape('title') %>!</button>
-    <button class="btn btn-danger btn-lg delete-deck">Delete <%= deck.escape('title') %></button>
+    <button class="btn btn-danger btn-lg delete-deck" data-deck-id="<%=deck.id%>">Delete <%= deck.escape('title') %></button>
   </form>
 
 <% }); %>
