--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <%= link_to "Log In", new_session_url %>
   <% end %>
 </div>
-<body id='content'>
+<body id='content' class="container">
 
   <div id="navigator"></div>
 
