--- a/app/assets/templates/deck/index.jst.ejs
+++ b/app/assets/templates/deck/index.jst.ejs
@@ -1,4 +1,10 @@
 <ul class="deck-list">
+  <div class="jumbotron">
+    <h1>Time to eat!</h1>
+    <p>What are you looking to study today? Go ahead and "Devour" a deck you are currently studying, or hop over to the Public Decks section to see decks you may want to add!</p>
+  </div>
+
+
 <% decks.each(function(deck) { %>
 
   <form class="form-inline">
