More Navbar improvements

--- a/app/assets/templates/navbar/navshow.jst.ejs
+++ b/app/assets/templates/navbar/navshow.jst.ejs
@@ -13,7 +13,7 @@
         <li><a href="#">Decks</a></li>
         <% if (currentUser) { %>
           <li id="study-dropdown" class="study dropdown">
-            <a type="submit" href="#/study" class="dropdown-toggle navbar-btn btn btn-default" data-toggle="dropdown">Study</a>
+            <a href="#/study" class="study-dropdown dropdown-toggle">Study</a>
           </li>
           <li><a href="#/decks/new">Add</a></li>
           <li><a href="#/search">Search</a></li>
