--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -30,11 +30,15 @@ h2.main-header {
 form {
   position: relative;
   text-align: center;
-  background: white;
   position: relative;
   text-align: center;
   padding: 10px;
   margin-bottom: 25px;
+}
+
+.panel-default {
+  background: white;
+  
 }
 
 form:first-child {
