--- a/app/assets/templates/navbar/navshow.jst.ejs
+++ b/app/assets/templates/navbar/navshow.jst.ejs
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-  <div class="container container-fluid">
+<nav class="navbar navbar-default navbar-fixed-top container container-fluid" role="navigation">
+  <div class="">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="devour-navbar-collapse-1">
       <span class="sr-only">Toggle navigation/Make this actually toggle a dropdown</span>
       <span class="icon-bar"><a href="#/search"></a></span>
@@ -8,21 +8,20 @@
     </button>
     <a class="main-title navbar-brand" href="/">Devour</a>
 
-    <div class="collapse navbar-collapse" id="devour-navbar-collapse-1">
+    <div class="collapse navbar-collapse row" id="devour-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="#">Decks</a></li>
         <% if (currentUser) { %>
-          <li id="study-dropdown" class="study dropdown">
-            <a href="#/study" class="study-dropdown dropdown-toggle">Study</a>
-          </li>
           <li><a href="#/decks/new">Add</a></li>
           <li><a href="#/search">Search</a></li>
           <li><a href="#/publicIndex">Public Decks</a></li>
-
           <li><a href="#/leaderboard">Leaderboard</a></li>
-          <li><a>More</a></li>
-        <% } %>
       </ul>
+      <% } else { %>
+
+      <p class="text-center col-md-8">Memorization. Made Easy.</p>
+
+      <% } %>
 
       <ul class="nav navbar-nav navbar-right">
         <% if (currentUser) { %>
