--- a/app/assets/templates/navbar/navshow.jst.ejs
+++ b/app/assets/templates/navbar/navshow.jst.ejs
@@ -6,7 +6,11 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <div class="navbar-header"><a class="main-title navbar-brand" href="/">Devour</a></div>
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/">
+        <img src="http://farm1.staticflickr.com/551/18692277976_73ce78935a_b.jpg" height="42" width="42" alt="Eat memory for dinner">
+      </a>
+    </div>
 
     <div class="collapse navbar-collapse">
       <% if (currentUser) { %>
