Write More Capybara; get something to raise screen

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Sign Up!</h1>
+<h1>Welcome, New user. Sign Up!</h1>
 
 <form class="user user-signup form form-horizontal" action="/users" method="post">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
