--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -112,6 +112,10 @@ a.sign-up {
 h2#deck-title {
 }
 
+.deck-list button.btn-primary {
+  background-color: cadetblue;
+}
+
 // #quiz {
 //   display: block;
 //   position: fixed;
