--- a/app/assets/templates/deck/index.jst.ejs
+++ b/app/assets/templates/deck/index.jst.ejs
@@ -10,7 +10,7 @@
           </h2>
         </a>
         <!-- <div class="panel panel-body"><%= deck.escape('description') %></div> -->
-        <button type="submit" data-deck-id="<%=deck.id%>" class="btn btn-default btn-block">Devour <%= deck.escape('title') %>!</button>
+        <button type="submit" data-deck-id="<%=deck.id%>" class="btn btn-primary btn-block">Devour <%= deck.escape('title') %>!</button>
       </div>
   <% }); %>
   </form>
