--- a/app/assets/templates/deck/index.jst.ejs
+++ b/app/assets/templates/deck/index.jst.ejs
@@ -1,4 +1,7 @@
 <ul class="deck-list" id="index">
+  <div class="jumbotron">
+    <p>Devour uses the SuperMemo-2 algorithm to schedule the best time for a card to come up for review. Difficult cards that you tend to forget quickly will be scheduled more often, while the app will not waste your time with over-review of easier items.</p>
+    </div>
   <% decks.each(function(deck) { %>
   <li class="deck-list-item-background list-inline clearfix">
     <div class="deck-list-item">
