--- a/app/assets/templates/deck/index.jst.ejs
+++ b/app/assets/templates/deck/index.jst.ejs
@@ -1,6 +1,6 @@
 <ul class="deck-list" id="index">
   <div class="jumbotron">
-    <p>Devour uses the SuperMemo-2 algorithm to schedule the best time for a card to come up for review. Difficult cards that you tend to forget quickly will be scheduled more often, while the app will not waste your time with over-review of easier items.</p>
+    <p>Devour uses the SuperMemo-2 algorithm to schedule the best time for a card to come up for review. Difficult cards that you tend to forget quickly will be scheduled more often, while the app will not waste your time with over-review of easier items. Add as many decks as you like from the Public directory, and have fun beating my score.</p>
     </div>
   <% decks.each(function(deck) { %>
   <li class="deck-list-item-background list-inline clearfix">
