Change Navbar to be more mobile-ready, change seed data

--- a/app/assets/templates/navbar/navshow.jst.ejs
+++ b/app/assets/templates/navbar/navshow.jst.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="devour-navbar-collapse-1">
       <span class="sr-only">Toggle navigation/Make this actually toggle a dropdown</span>
