--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,7 @@
 <form class="user user-signup form form-horizontal" action="/users" method="post">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 
-  <img id="logo" src="http://farm1.staticflickr.com/551/18692277976_73ce78935a_b.jpg" alt="Eat memory for dinner">
+  <img id="logo" src="http://res.cloudinary.com/tpayne/image/upload/s--xdim-s0F--/q_jpegmini/v1434730435/the-white-room_o9wwww.jpg" alt="Eat memory for dinner">
 
   <div class="form-group">
     <% if flash[:errors] %>
