--- a/app/assets/templates/leaderboard/index.jst.ejs
+++ b/app/assets/templates/leaderboard/index.jst.ejs
@@ -3,7 +3,7 @@
     <h1>You will NEVER catch me... :)</h1>
   </div>
 
-  <table class="table table-hover">
+  <table class="table table-striped">
     <thead>
       <tr>
         <th>User (by email)</th>
