--- a/app/assets/templates/message/index.jst.ejs
+++ b/app/assets/templates/message/index.jst.ejs
@@ -3,16 +3,17 @@
   <div class="received-messages">
     <h2>Received Messages</h2>
     <table class="table">
-      <th>
-        <td>Subject</td>
-        <td>Body</td>
-      </th>
-    <% received_messages.each(function(message) { %>
-      <tr class="message-item">
-        <td><%= message.escape('subject') %></td>
-        <td><%= message.escape('body') %></td>
+      <tr>
+        <th>Subject</th>
+        <th>Body</th>
       </tr>
-    <% }); %>
+
+      <% received_messages.each(function(message) { %>
+        <tr class="message-item">
+          <td><%= message.escape('subject').slice(0,8) || "Untitled" %></td>
+          <td><%= message.escape('body') %></td>
+        </tr>
+      <% }); %>
     </table>
   </div>
 
@@ -25,7 +26,7 @@
       </th>
     <% sent_messages.each(function(message) { %>
       <tr>
-        <td><%= message.escape('subject') %></td>
+        <td><%= message.escape('subject').slice(0,8) || "Untitled" %></td>
         <td><%= message.escape('body') %></td>
       </tr>
     <% }); %>
