Fix language in AuthMailer template; install 'Heroku-deflater' gem(I hope it works)

--- a/app/views/auth_mailer/signup_email.html.erb
+++ b/app/views/auth_mailer/signup_email.html.erb
@@ -4,12 +4,12 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <h1>Welcome to Devour.space, <%= @user.email %></h1>
+    <h1>Welcome to Devour.space, <%= @user.email %>!</h1>
     <p>
-      You have successfully signed up to Torrey Payne's memorization App, inspired
-      by the SuperMemo-2 algorithm designed by Piotr Wozniak. Thank you for supporting
-      the cause, and please contact me with any suggestions/bugs/comments on Devour.space
-      by private message or at torreyl.payne@gmail.com. Having fun Devouring!
+      You have successfully signed up to Torrey Payne's memorization app, Devour, inspired
+      by Piotr Wozniak's SuperMemo-2 algorithm. Thank you for supporting
+      the cause, and please contact me with any suggestions/bugs/comments on Devour.space.
+       I can be contacted by private message or at torreyl.payne@gmail.com. Having fun Devouring!
     </p>
     <p>
       To login to the site, just follow this link: <%= 'http://www.devour.space' %>.
