Hopefully fix Guest login and Navbar without bugs

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -15,6 +15,14 @@ ul.deck-list {
   margin-top: 7%;
 }
 
+nav {
+  margin-bottom: 6%;
+}
+
+#flash {
+  margin-top: 5%;
+}
+
 img {
   margin-bottom: 20px;
 }
