--- a/app/assets/templates/search/search.jst.ejs
+++ b/app/assets/templates/search/search.jst.ejs
@@ -2,7 +2,7 @@
   <div class="col-lg-10">
     <div class="input-group">
       <label for="search">Search</label>
-      <input type="text" class="form-control input-lg" id="search" name="title" placeholder="Search for...">
+      <input type="text" class="form-control input-block" id="search" name="title" placeholder="Search for...">
     </div>
   </div>
 </div>
