--- a/app/views/auth_mailer/reset_password_email.text.erb
+++ b/app/views/auth_mailer/reset_password_email.text.erb
@@ -3,6 +3,6 @@ Reset your password on Devour, <%= @user.email %>
 
 
 
-To login to the site, just follow this link: <%= 'http://www.devour.space/users/authenticate/' + @user.authenticity_token %>.
+To login to the site, just follow this link: <%= link_to "Reset Password", edit_password_reset_url(@user.password_reset_token, email: @user.email) %>.
 
 Thanks for joining and have a great day!
