--- a/app/views/auth_mailer/reset_password_email.html.erb
+++ b/app/views/auth_mailer/reset_password_email.html.erb
@@ -6,7 +6,7 @@
   <body>
     <p>In order to reset your password, please click on the link below:</p>
     <p>
-      To login to the site, just follow this link: <%= link_to "Reset Password", edit_password_reset_url(@user.password_reset_token, email: @user.email) %>.
+      To login to the site, just follow this link: <%= link_to "Reset Password", edit_password_reset_url(id: @user.password_reset_token, email: @user.email) %>.
     </p>
 
     <p>This link will expire in two hours.</p>
