--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -3,8 +3,12 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@user, url: password_reset_url(params[:id])) do |f| %>
-      <%= render 'shared/error_messages' %>
+    <%= form_for(@user, url: password_reset_url(id: params[:id])) do |f| %>
+      <% if flash[:errors] %>
+        <% flash[:errors].each do |error| %>
+          <%= error %>
+        <% end %>
+      <% end %>
 
       <%= hidden_field_tag :email, @user.email %>
 
