Make sidebar buttons align cleanly

--- a/app/assets/templates/card/answer.jst.ejs
+++ b/app/assets/templates/card/answer.jst.ejs
@@ -10,10 +10,10 @@
         <span>1: Almost.</span>
       </div>
       <div class="col-md-2">
-        <span>2: Took a bit, but I got it.</span>
+        <span>2: Took a few seconds, but I got it.</span>
       </div>
       <div class="col-md-2">
-        <span>3: Not immediate, but I got it.</span>
+        <span>3: Within 2 seconds I got it.</span>
       </div>
       <div class="col-md-2">
         <span>4: Confidently recalled the item.</span>
