--- a/app/assets/templates/deck/form.jst.ejs
+++ b/app/assets/templates/deck/form.jst.ejs
@@ -8,12 +8,7 @@
       <input type="text" name="deck[title]" class="form-control" placeholder="Title">
     </div>
   </div>
-  <div class="form-inline">
-    <div class="input-group input-group-lg">
-      <label for="course-id">Course ID</label>
-      <input id="course-id" type="integer" name="deck[course_id]" class="form-control" placeholder="Course ID">
-    </div>
-  </div>
+  <div class="form-inline"></div>
   <br>
 
   <div class="col-md-12" role="group">
