Update demo image

--- a/app/assets/templates/deck/index.jst.ejs
+++ b/app/assets/templates/deck/index.jst.ejs
@@ -22,7 +22,7 @@
   <% } else { %>
     <div class="deck-list deck-list-empty">
       <h1>Devour Data. Devour Information. Set Yourself Free.</h1>
-      <img src="http://res.cloudinary.com/tpayne/image/upload/v1436225110/product1_ky8ad4.png" height="500" width="800" alt="Demo">
+      <img src="http://res.cloudinary.com/tpayne/image/upload/s--H7739awF--/q_jpegmini/v1436435373/demo_qnycnc.jpg" height="500" width="800" alt="Demo">
       <button class="btn deck-list" id="guide"><a href="#/publicIndex">Go To Public Decks</a></button>
       <h2>Go To Public Decks or Add Your Own. Memorize Everything. Learn At Your Own Pace.</h2><br>
       <h3>
