Add Comments, rake database, make controller

--- a/app/assets/templates/navbar/navshow.jst.ejs
+++ b/app/assets/templates/navbar/navshow.jst.ejs
@@ -25,6 +25,7 @@
         <li><a href="#/leaderboard">Leaderboard</a></li>
         <li><a href="#/usersIndex">Contact Users</a></li>
         <li><a href="#/messages">Messages</a></li>
+        <li><a href="#/forum">Forum</a></li>
       </ul>
       <% } else { %>
       <ul class="nav navbar-nav slogan">
