--- a/app/assets/templates/deck/show.jst.ejs
+++ b/app/assets/templates/deck/show.jst.ejs
@@ -1,10 +1,10 @@
 <aside class="col-md-2 quiz-sizebar">
-  <h2 class="col-md-8 sidebar-header"><%= deck.escape('title') %><span style="color: tomato;" class="fa fa-heart"></span></h2>
+  <h2 class="col-xs-12 sidebar-header"><%= deck.escape('title') %><span style="color: tomato;" class="fa fa-heart"></span></h2>
   <div class="row">
-    <button type="button" class="btn btn-default go-to-data col-md-8">See your data!</button>
+    <button type="button" class="btn btn-default go-to-data col-xs-12">See your data!</button>
   </div>
   <div class="row">
-    <button type="button" class="btn btn-default go-to-add-cards col-md-8">Add Cards</button>
+    <button type="button" class="btn btn-default go-to-add-cards col-xs-12">Add Cards</button>
   </div>
 </aside>
 
