Style Card Show

--- a/app/assets/templates/card/answer.jst.ejs
+++ b/app/assets/templates/card/answer.jst.ejs
@@ -1,6 +1,6 @@
 <div class="answer container-fluid">
 
-  <h1 class="answer card-answer card-show quiz-show col-md-7 col-md-offset-2 panel-body"><%= card.escape('answer') %></h1>
+  <h1 class="answer card-answer card-show quiz-show col-xs-12 panel-body"><%= card.escape('answer') %></h1>
   <div class="answer-buttons btn-toolbar btn-group btn-group-justified row">
 
     <div class="row">
