--- a/app/assets/templates/deck/show.jst.ejs
+++ b/app/assets/templates/deck/show.jst.ejs
@@ -1,11 +1,14 @@
-<aside class="col-md-2 quiz-sizebar">
-  <h2 class="col-xs-12 sidebar-header"><%= deck.escape('title') %><span style="color: tomato;" class="fa fa-heart"></span></h2>
-  <div class="row">
-    <button type="button" class="btn btn-default go-to-data col-xs-12">See your data!</button>
-  </div>
-  <div class="row">
-    <button type="button" class="btn btn-default go-to-add-cards col-xs-12">Add Cards</button>
-  </div>
-</aside>
+<div class="deck-show">
 
-<ul class="deck cards-list cards-show quiz quiz-index col-md-5" id="quiz"></ul>
+  <aside class="col-xs-2 quiz-sizebar">
+    <h2 class="col-xs-12 sidebar-header"><%= deck.escape('title') %><span style="color: tomato;" class="fa fa-heart"></span></h2>
+    <div class="row">
+      <button type="button" class="btn btn-default go-to-data col-xs-12">See your data!</button>
+    </div>
+    <div class="row">
+      <button type="button" class="btn btn-default go-to-add-cards col-xs-12">Add Cards</button>
+    </div>
+  </aside>
+
+  <ul class="deck cards-list cards-show quiz quiz-index col-md-5" id="quiz"></ul>
+</div>
