Can reveal cards with the space button; can submit responses with the 0-5 keys

--- a/app/assets/templates/card/answer.jst.ejs
+++ b/app/assets/templates/card/answer.jst.ejs
@@ -5,22 +5,22 @@
 
     <div class="row">
       <div class="col-md-2">
-        <button class="button btn-red btn-lg answer answer-button" type="submit" data-quality="0" data-card-id="<%= card.id %>" data-e-factor="<%= card.get('e_factor') %>" value="0">0</button>
+        <button class="button btn-red btn-lg answer answer-button" id="48" type="submit" data-quality="0" data-card-id="<%= card.id %>" data-e-factor="<%= card.get('e_factor') %>" value="0">0</button>
       </div>
       <div class="col-md-2">
-        <button class="button btn-red btn-lg answer answer-button" type="submit" data-quality="1" data-card-id="<%= card.id %>" data-e-factor="<%= card.get('e_factor') %>" value="1">1</button>
+        <button class="button btn-red btn-lg answer answer-button" id="49" type="submit" data-quality="1" data-card-id="<%= card.id %>" data-e-factor="<%= card.get('e_factor') %>" value="1">1</button>
       </div>
       <div class="col-md-2">
-        <button class="button btn-green btn-lg answer answer-button" type="submit" data-quality="2" data-card-id="<%= card.id %>" data-e-factor="<%= card.get('e_factor') %>" value="2">2</button>
+        <button class="button btn-green btn-lg answer answer-button" id="50" type="submit" data-quality="2" data-card-id="<%= card.id %>" data-e-factor="<%= card.get('e_factor') %>" value="2">2</button>
       </div>
       <div class="col-md-2">
-        <button class="button btn-green btn-lg answer answer-button" type="submit" data-quality="3" data-card-id="<%= card.id %>" data-e-factor="<%= card.get('e_factor') %>" value="3">3</button>
+        <button class="button btn-green btn-lg answer answer-button" id="51" type="submit" data-quality="3" data-card-id="<%= card.id %>" data-e-factor="<%= card.get('e_factor') %>" value="3">3</button>
       </div>
       <div class="col-md-2">
-        <button class="button btn-blue btn-lg answer answer-button" type="submit" data-quality="4" data-card-id="<%= card.id %>" data-e-factor="<%= card.get('e_factor') %>" value="4">4</button>
+        <button class="button btn-blue btn-lg answer answer-button" id="52" type="submit" data-quality="4" data-card-id="<%= card.id %>" data-e-factor="<%= card.get('e_factor') %>" value="4">4</button>
       </div>
       <div class="col-md-2">
-        <button class="button btn-blue btn-lg answer answer-button" type="submit" data-quality="5" data-card-id="<%= card.id %>" data-e-factor="<%= card.get('e_factor') %>" value="5">5</button>
+        <button class="button btn-blue btn-lg answer answer-button" id="53" type="submit" data-quality="5" data-card-id="<%= card.id %>" data-e-factor="<%= card.get('e_factor') %>" value="5">5</button>
       </div>
     </div>
 
