--- a/app/assets/templates/card/show.jst.ejs
+++ b/app/assets/templates/card/show.jst.ejs
@@ -12,7 +12,7 @@
         <h1 class="question card-question card-show quiz-show quiz col-xs-12 panel-body">
           <%= card.escape('question') %>
         </h1>
-        <button type="submit" class="btn btn-lg btn-block btn-primary btn-reveal">Reveal Answer</button>
+        <button type="submit" id="show-answer" class="btn btn-lg btn-block btn-primary btn-reveal">Reveal Answer</button>
         <button type="submit" class="btn btn-lg btn-block edit-card edit-button">Edit Card</button>
         <div class="card answer-box"></div>
       </div>
