--- a/app/assets/templates/deck/index.jst.ejs
+++ b/app/assets/templates/deck/index.jst.ejs
@@ -1,7 +1,8 @@
 <% if (currentUser) { %>
 <ul class="deck-list" id="index">
   <% if (decks.length > 0) { %>
-    <p>  Difficult cards that you tend to forget quickly will be scheduled more often, while the app will not waste your time with over-review of easier items.
+    <p class="jumbotron">
+        Difficult cards that you tend to forget quickly will be scheduled more often, while the app will not waste your time with over-review of easier items.
     Add decks from the Public directory, and have fun beating my score.
     </p>
     <% decks.each(function(deck) { %>
