--- a/app/assets/templates/navbar/navshow.jst.ejs
+++ b/app/assets/templates/navbar/navshow.jst.ejs
@@ -1,23 +1,22 @@
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-default">
   <div class="container-fluid">
-    <button type="button" id="dropdown-button" class="navbar-toggle" data-toggle="collapse" data-target="devour-navbar-collapse-1">
-      <span class="sr-only">Toggle navigation/Make this actually toggle a dropdown</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
+    
     <div class="navbar-header">
+      <button type="button" id="dropdown-button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#devour-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation/Make this actually toggle a dropdown</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
       <a class="navbar-brand" href="/">
         <img src="http://farm1.staticflickr.com/551/18692277976_73ce78935a_b.jpg" height="42" width="42" alt="Eat memory for dinner">
       </a>
     </div>
 
-    <div class="collapse dropdown-links"></div>
-
-    <div class="collapse navbar-collapse" id="links">
+    <div class="collapse navbar-collapse" id="devour-navbar-collapse-1">
       <% if (currentUser) { %>
-      <ul class="nav navbar-nav links">
+      <ul class="nav navbar-nav">
         <li><a href="#">Decks</a></li>
         <li><a href="#/decks/new">Create</a></li>
         <li><a href="#/search">Search</a></li>
