--- a/app/assets/templates/navbar/navshow.jst.ejs
+++ b/app/assets/templates/navbar/navshow.jst.ejs
@@ -10,7 +10,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/">
-        <img src="http://farm1.staticflickr.com/551/18692277976_73ce78935a_b.jpg" height="42" width="42" alt="Eat memory for dinner">
+        <img id="brand" src="http://farm1.staticflickr.com/551/18692277976_73ce78935a_b.jpg" height="42" width="42" alt="Eat memory for dinner">
       </a>
     </div>
 
