Styling on navbar

--- a/app/assets/templates/navbar/navshow.jst.ejs
+++ b/app/assets/templates/navbar/navshow.jst.ejs
@@ -28,7 +28,7 @@
       </ul>
       <% } else { %>
       <ul class="nav navbar-nav slogan">
-        <li><span class="text-center">Memorization. Made Easy. Get Your Full.</span></li>
+        <li><span class="text-center navbar-brand">Memorization. Made Easy. Get Your Full.</span></li>
       </ul>
       <% } %>
 
