Restore login bars

--- a/app/assets/templates/reddit/RedditIndex.jst.ejs
+++ b/app/assets/templates/reddit/RedditIndex.jst.ejs
@@ -1,5 +1,6 @@
 <div class="forum-index">
     <span class="jumbotron">Welcome to Devour.Space.</span>
+    <div class="jumbotron"><%= forum %></div>
     
     
     
