--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -4,12 +4,12 @@
 }
 
 span#slogan {
-  margin-left: 79px;
+  /*margin-left: 79px;*/
 }
 
 ul.slogan {
   padding-top: 2%;
-  margin-left: 25%;
+  margin-left: 38%;
 }
 
 #sign-out {
