--- a/app/assets/templates/navbar/navshow.jst.ejs
+++ b/app/assets/templates/navbar/navshow.jst.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
-    
+
     <div class="navbar-header">
       <button type="button" id="dropdown-button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#devour-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation/Make this actually toggle a dropdown</span>
@@ -9,26 +9,30 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">
-        <img id="brand" src="http://farm1.staticflickr.com/551/18692277976_73ce78935a_b.jpg" height="42" width="42" alt="Eat memory for dinner">
-      </a>
     </div>
 
     <div class="collapse navbar-collapse" id="devour-navbar-collapse-1">
+      <a class="navbar-brand col-xs-4" href="/">
+        <img id="brand" src="http://farm1.staticflickr.com/551/18692277976_73ce78935a_b.jpg" height="100" width="100" alt="Eat memory for dinner">
+      </a>
       <% if (currentUser) { %>
-      <ul class="nav navbar-nav navbar-center">
-        <li><a href="#">Decks</a></li>
-        <li><a href="#/decks/new">Create</a></li>
-        <li><a href="#/search">Search</a></li>
-        <li><a href="#/publicIndex">PUBLIC DIRECTORY</a></li>
-        <li><a href="#/leaderboard">Leaderboard</a></li>
-        <li><a href="#/usersIndex">Contact Users</a></li>
-        <li><a href="#/messages">Messages</a></li>
-        <li><a href="#/forum">Forum</a></li>
+      <ul class="nav navbar-nav col-xs-4">
+        <div class="row">
+          <li class="col-xs-3"><a class="navbar-link" href="#">Decks</a></li>
+          <li class="col-xs-3"><a class="navbar-link" href="#/decks/new">Create</a></li>
+          <li class="col-xs-3"><a class="navbar-link" href="#/search">Search</a></li>
+          <li class="col-xs-3"><a class="navbar-link" href="#/publicIndex">Public Directory</a></li>
+        </div>
+        <div class="row">
+          <li class="col-xs-3"><a class="navbar-link" href="#/leaderboard">Leaderboard</a></li>
+          <li class="col-xs-3"><a class="navbar-link" href="#/usersIndex">Contact Users</a></li>
+          <li class="col-xs-3"><a class="navbar-link" href="#/messages">Messages</a></li>
+          <li class="col-xs-3"><a class="navbar-link" href="#/forum">Forum</a></li>
+        </div>
       </ul>
       <% } else { %>
-      <ul class="nav navbar-nav slogan">
-        <li><span id="slogan" class="text-center navbar-brand">Memorization.  Made Easy.  Get Your Full.</span></li>
+      <ul class="nav navbar-nav col-xs-4">
+        <li id="slogan-list-item" class="col-xs-offset-3 col-xs-6"><span id="slogan" class="navbar-brand">Memorization. Made Easy. Get Your Full.</span></li>
       </ul>
       <% } %>
 
